public/styles/index.css
/* ... */
/* -------------------------------------------------------------------------------------------*/
/* SECTION WITH DATE INPUTS-------------------------------------------------------------------*/
/* -------------------------------------------------------------------------------------------*/

.date-input {
   margin-top: -60px;
   margin-right: 20px;

   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
}

#date-params {
   padding: 3px 8px;

   background-color: transparent;
   transition: background-color ease 0.1s;

   border: 1px solid var(--border-grey);
   border-radius: 3px;

   margin-bottom: 20px;
   margin-left: 15px;
}

#date-params:hover {
   cursor: pointer;

   background-color: #ffffff1a;
   transition: background-color ease 0.1s;
}

.right-date, .left-date {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
}

.right-date div, .left-date div {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 25px;
}

.right-date div button, .left-date div button {
   font-size: 20px;

   margin-top: 10px;

   width: 40px;
   height: 38px;

   padding: 0px 3px;

   border: 1px solid var(--border-grey);
}

.right-date {
   margin-top: 30px;
}

.left-date input, .right-date input {
   padding: 10px 10px;
   margin-top: 10px;
   margin-right: -20px;

   border: 1px solid var(--border-grey);
   border-radius: 3px;
}

input[type="datetime-local"]::-webkit-calendar-picker-indicator {
   filter: brightness(150%);
}

#left-date-inp:hover, #right-date-inp:hover {
   background-color: rgba(255, 255, 255, 0.1);
   transition: background-color ease 0.1s;
   cursor: pointer;
}

/* -------------------------------------------------------------------------------------------*/
/* -------------------------------------------------------------------------------------------*/

#option {
   background-color: #282a2b;
}

#sum-file {
   text-decoration: none;

   transition: background-color ease 0.1s;

   border: 1px solid #00ffff;
   border-radius: 3px;

   max-width: fit-content;

   padding: 9px 13px;

   align-self: center;
}

#sum-file:hover {
   background-color: #ff5e00;
   transition: background-color ease 0.1s;
}

#mode {
   margin-left: 100px;
}

/*-------------------------------------------------------------------------------------*/
/*-------------------------------------------------------------------------------------*/


/*-------------------------------------------------------------------------------------*/
/* SUMMARY TABLE ----------------------------------------------------------------------*/
/*-------------------------------------------------------------------------------------*/

#summary-table {
   margin: auto;
   margin-top: 80px;
   max-width: 0px;
}

#summary-table th,
#summary-table td {
   padding: 10px 10px;
}

#summary-table tbody tr {
   border-bottom: 1px solid #464646;
   background-color: #cacaca;
}

#summary-table tbody tr:nth-child(even) {
   transition: background-color ease 0.1s;
   background-color: #a2a2a2;
}

#summary-table tbody tr:last-of-type {
   border-bottom: 2px solid #00788b;
   border-radius: 50px;
}

#summary-table td {
   color: rgb(0, 0, 0);
   font-size: 11px;
   font-weight: 500;
}

#summary-table td:hover {
   cursor: pointer;
   background-color: #6f6e6e;
   transition: background-color ease 0.1s;
}

#summary-table td {
   padding: 12px 15px;
}

#summary-table th {
   background-color: #00788b;
}

/*-------------------------------------------------------------------------------------*/
/*-------------------------------------------------------------------------------------*/

/*-------------------------------------------------------------------------------------*/
/* MAIN TABLE WITH ALL DATA------------------------------------------------------------*/
/*-------------------------------------------------------------------------------------*/

.over-tables {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
}

.over-tables div {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
}

.over-tables #mode-label {
   margin: 0 10px 0 100px;

   min-width: fit-content;
}

#save-filter-option {
   margin-left: 15px;

   margin-right: -30px;
}

#save-filter-option-label {
   min-width: fit-content;
}

.over-tables div input {
   transform: scale(1.6);
}

.over-tables .shown-rows-counter-div {
   min-width: fit-content;

   margin-right: 45em;

   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 5px;
}

.over-tables .shown-rows-counter-div #shown-rows-counter {
   margin-left: 15px;
}

.over-tables .save {
   font-size: 50px;
   transition: 0.2s;

   margin: 0 50px;
}

.over-tables .save i:hover {
   color: #00d9ff;
   transition: 0.2s;

   cursor: pointer;
}

/*---------------------------------------------------------------------------------------*/
/*LOADING CIRCLE ANIMATION --------------------------------------------------------------*/
/*---------------------------------------------------------------------------------------*/

.loading-table {

   min-width: 200px;

   position: absolute;
   right: 53%;
   left: 47%;
}

.lds-roller {

   display: inline-block;
   transition: display ease 2s;

   transition: 0.5s;

   position: absolute;
   margin-top: 100px;
   right: 50%;
   left: 50%;

   width: 80px;
   height: 80px;
}

.lds-roller div {
   animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
   transform-origin: 40px 40px;
}

.lds-roller div:after {
   content: " ";
   display: block;
   position: absolute;
   width: 7px;
   height: 7px;
   border-radius: 50%;
   background: #cef;
   margin: -4px 0 0 -4px;
}

.lds-roller div:nth-child(1) {
   animation-delay: -0.036s;
}

.lds-roller div:nth-child(1):after {
   top: 63px;
   left: 63px;
}
/* ... */

